Fix ForgeInjectBukkit